--- a/TranslationReg/Views/Projects/List.cshtml
+++ b/TranslationReg/Views/Projects/List.cshtml
@@ -44,7 +44,8 @@
                    href="/Projects/Delete/@project.Id" class="btn btn-danger deleteBtn">Удалить</a>
             </div>
         </div>
+        <div id="@(project.Id)" class="dynamicBlock dynamicBlock-prop"></div>
     </div>
-        <div id="@(project.Id)" class="dynamicBlock"></div>
+        
     }
 </div>
