--- a/TranslationReg/Views/LanguagePairs/Edit.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Edit.cshtml
@@ -1,44 +1,30 @@
 ﻿@model TranslationReg.Models.LanguagePairsModel
 
-<div class="formContainer">
 
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-    <div class="form-horizontal">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.languagePair.Id)
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.languagePair.Id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.languagePair.Name, "Наименование", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
-                @Html.ValidationMessageFor(model => model.languagePair.Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.languagePair.OriginalLanguageId, "Язык оригинала", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.languagePair.OriginalLanguageId, Model.originalLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.languagePair.TranslationLanguageId, "Язык перевода", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.languagePair.TranslationLanguageId, Model.translationLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Сохранить" class="btn btn-default" />
-            </div>
-        </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.languagePair.Name, "Наименование")
+        @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
+        @Html.ValidationMessageFor(model => model.languagePair.Name, "", new { @class = "text-danger" })
     </div>
-    }
-</div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.languagePair.OriginalLanguageId, "Язык оригинала")
+        @Html.DropDownListFor(model => model.languagePair.OriginalLanguageId, Model.originalLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.languagePair.TranslationLanguageId, "Язык перевода")
+        @Html.DropDownListFor(model => model.languagePair.TranslationLanguageId, Model.translationLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
+    </div>
+
+    <input type="submit" value="Сохранить" class="btn btn-default btn-form" />
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
