--- a/TranslationReg/Views/DocStages/Item.cshtml
+++ b/TranslationReg/Views/DocStages/Item.cshtml
@@ -13,7 +13,7 @@
         </div>
     </div>
 </div>
-<div id="addUserStageForm@(Model.Id)" class="dynamicBlock"></div>
+<div id="addUserStageForm@(Model.Id)" class="dynamicBlock dynamic-block-add-stage"></div>
 
 @if (Model.User_Stage != null && Model.User_Stage.Count != 0)
 {
