--- a/TranslationReg/Views/Documents/Index.cshtml
+++ b/TranslationReg/Views/Documents/Index.cshtml
@@ -27,7 +27,7 @@
 </div>
 
 <a data-ajax-update="#addDoc" data-href="/Documents/Create" class="btn btn-primary ajaxToggleBtn">Добавить</a>
-<div id="addDoc" class="dynamicBlock"></div>
+<div id="addDoc" class="dynamicBlock dynamic-block-create"></div>
 
 <!-- СПИСОК ДОКУМЕНТОВ -->
 <div id="docList">
