--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -34,7 +34,7 @@
 </div>
 
 <a data-ajax-update="#addProj" data-href="/Projects/Create" class="btn btn-primary ajaxToggleBtn">Добавить</a>
-<div id="addProj" class="dynamicBlock"></div>
+<div id="addProj" class="dynamicBlock dynamic-block-create"></div>
 
 <div id="projectList">
     @Html.Partial("List")
