--- a/TranslationReg/Style/style.less
+++ b/TranslationReg/Style/style.less
@@ -82,9 +82,7 @@ footer {
     background-color: #241717;
 }
 
-.dynamicBlock {
-    display: none;
-}
+
 
 .dl-horizontal {
     font-size: 22px;
@@ -95,31 +93,33 @@ footer {
         width: 210px;
         height: @demensionHeight;
         text-align: left;
-        :hover{
+
+        :hover {
             background-color: darkgray;
-            transition: background-color 0.5s ;
+            transition: background-color 0.5s;
         }
     }
 
     > dd {
         margin-left: 210px;
         height: @demensionHeight;
-        a{
+
+        a {
             display: inline-block;
         }
-        span{
+
+        span {
             display: inline;
             line-height: @demensionHeight;
             vertical-align: middle;
         }
     }
-
 }
 
 
 
 //--------------------Стили для таблиц------------------------------------
-.tables{
+.tables {
     padding: 0;
 }
 
@@ -143,6 +143,10 @@ footer {
     }
 }
 //--------------------Стили заголовков для таблиц-------------------------
+
+.btn-form {
+    align-self: flex-start;
+}
 
 //-----------------------Стили элементов таблиц----------------------------
 .properties {
@@ -177,7 +181,7 @@ footer {
                 width: auto;
                 margin-left: 5px;
                 position: relative;
-                text-align: center;
+                text-align: left;
                 font-size: 26px;
 
                 &:after {
@@ -212,10 +216,7 @@ footer {
             display: flex;
             flex-direction: column;
             width: 500px;
-            .btn-form{
-                width: 100px;
-                align-self: center;
-            } 
+
             .form-group {
                 display: flex;
 
@@ -236,6 +237,10 @@ footer {
             margin-bottom: 0;
         }
     }
+}
+
+.dynamicBlock {
+    display: none;
 }
 
 //-----------------------Стили элементов таблиц----------------------------
@@ -402,8 +407,7 @@ footer {
             border-radius: 30px;
 
             &:hover {
-                background: #241717;
-                color: white;
+                box-shadow: inset 0 0 0 2px #241717;
             }
         }
     }
@@ -491,9 +495,70 @@ footer {
         .small {
             padding: 10px 0;
             border-bottom: none;
-            a{
+
+            a {
                 display: flex;
                 margin: auto;
+            }
+        }
+    }
+}
+
+.details-document {
+    h3{
+        text-decoration: underline;
+    }
+    .details-actions-document {
+        display: flex;
+        flex-direction: row;
+        z-index: 10;
+        padding: 5px 5px;
+        transition: all 1s;
+        width: 105px;
+        overflow: hidden;
+
+        a {
+            display: flex;
+            align-self: center;
+            margin: 5px;
+        }
+
+        &:hover {
+            width: 668px;
+            border-radius: 10px;
+            background-color: white;
+        }
+    }
+}
+
+.dynamic-block-create{
+    > form{
+        display: flex;
+        flex-direction: column;
+        div{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            label{
+                width: 180px;
+            }
+
+        }
+    }
+}
+
+.dynamic-block-add-stage {
+    > form {
+        display: flex;
+        flex-direction: column;
+
+        div {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+
+            label {
+                width: 150px;
             }
         }
     }
