--- a/TranslationReg/Views/Account/Login.cshtml
+++ b/TranslationReg/Views/Account/Login.cshtml
@@ -6,33 +6,27 @@
 
 <h2>Авторизация</h2>
 
+    <div class="dynamic-block-create">
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
         
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, "Логин", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @Html.LabelFor(model => model.Name, "Логин" )
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Password,"Пароль", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @Html.LabelFor(model => model.Password,"Пароль" )
                 @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Авторизоваться" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
+
+                <input type="submit" value="Авторизоваться" class="btn btn-default btn-form" />
+
 }
+    </div>
