--- a/TranslationReg/Views/Analytics/Filters.cshtml
+++ b/TranslationReg/Views/Analytics/Filters.cshtml
@@ -1,58 +1,40 @@
 ﻿@model TranslationReg.Models.ReportModel
-<div class="formContainer">
+<div class="dynamic-block-create">
     @using (Html.BeginForm("FormReport", "Analytics", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
 
-            <div class="form-group">
-                @Html.Label("За все время", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.CheckBox("filters.ForAllTime")
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.Label("Дата от", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <input type="date" name="filters.PeriodFrom" value="@Model.DateFrom" id="dateFrom">
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.Label("Дата до", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <input type="date" name="filters.PeriodTo" value="@Model.DateTo" id="dateTo">
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.Label("Проект", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("filters.projectId", Model.ProjectList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.Label("Работник", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("filters.userId", Model.UserList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.Label("Тип работ", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("filters.workTypeId", Model.WorkTypeList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Сформировать отчет" class="btn btn-default" />
-                </div>
-            </div>
+        <div class="form-group">
+            @Html.Label("За все время")
+            @Html.CheckBox("filters.ForAllTime")
         </div>
+
+        <div class="form-group">
+            @Html.Label("Дата от")
+            <input type="date" name="filters.PeriodFrom" value="@Model.DateFrom" id="dateFrom">
+        </div>
+
+        <div class="form-group">
+            @Html.Label("Дата до")
+            <input type="date" name="filters.PeriodTo" value="@Model.DateTo" id="dateTo">
+        </div>
+
+        <div class="form-group">
+            @Html.Label("Проект")
+                @Html.DropDownList("filters.projectId", Model.ProjectList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+        </div>
+
+        <div class="form-group">
+            @Html.Label("Работник")
+            @Html.DropDownList("filters.userId", Model.UserList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+        </div>
+
+        <div class="form-group">
+            @Html.Label("Тип работ")
+            @Html.DropDownList("filters.workTypeId", Model.WorkTypeList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+        </div>
+
+        <input type="submit" value="Сформировать отчет" class="btn btn-default btn-form" />
     }
 </div>
