--- a/TranslationReg/Views/DocStages/Create.cshtml
+++ b/TranslationReg/Views/DocStages/Create.cshtml
@@ -1,39 +1,29 @@
 ﻿@model TranslationRegistryModel.DocStage
 
-<div>
-    @if (ViewBag.Available)
+@if (ViewBag.Available)
+{
+    using (Html.BeginForm())
     {
-        using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
+        @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.DocumentId)
-                @Html.HiddenFor(model => model.DocFileId)
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.DocumentId)
+        @Html.HiddenFor(model => model.DocFileId)
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.WorkTypeId, "Тип работ", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("WorkTypeId", null, htmlAttributes: new { @class = "form-control", requred = "required" })
-                        @Html.ValidationMessageFor(model => model.WorkTypeId, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.WorkTypeId, "Тип работ" )
+            @Html.DropDownList("WorkTypeId", null, htmlAttributes: new { @class = "form-control", requred = "required" })
+            @Html.ValidationMessageFor(model => model.WorkTypeId, "", new { @class = "text-danger" })
+        </div>
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Сохранить" class="btn btn-default" />
-                    </div>
-                </div>
-            </div>
-        }
+        <input type="submit" value="Сохранить" class="btn btn-default" />
     }
-    else
-    {
-        <p>Все возможные стадии присутствуют.</p>
-        <p>Добавьте работу в существующие стадии.</p>
-        <p>Либо добавьте новые типы работ</p>
-    }
-    
-</div>
+}
+else
+{
+    <p>Все возможные стадии присутствуют.</p>
+    <p>Добавьте работу в существующие стадии.</p>
+    <p>Либо добавьте новые типы работ</p>
+}
+
 
