--- a/TranslationReg/Views/DocStages/Edit.cshtml
+++ b/TranslationReg/Views/DocStages/Edit.cshtml
@@ -1,29 +1,21 @@
 ﻿@model TranslationRegistryModel.DocStage
 
-<div class="formContainer">
+<div class="dynamic-block-create">
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        
-    <div class="form-horizontal">
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
         @Html.HiddenFor(model => model.Document.Id)
         @Html.HiddenFor(model => model.DocFileId)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.WorkTypeId, "WorkTypeId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("WorkTypeId", null, htmlAttributes: new { @class = "form-control", requred = "required" })
-                @Html.ValidationMessageFor(model => model.WorkTypeId, "", new { @class = "text-danger" })
-            </div>
+            @Html.LabelFor(model => model.WorkTypeId, "WorkTypeId")
+            @Html.DropDownList("WorkTypeId", null, htmlAttributes: new { @class = "form-control", requred = "required" })
+            @Html.ValidationMessageFor(model => model.WorkTypeId, "", new { @class = "text-danger" })
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Сохранить" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
+        <input type="submit" value="Сохранить" class="btn btn-default btn-form" />
     }
 </div>
