--- a/TranslationReg/Views/Documents/Create.cshtml
+++ b/TranslationReg/Views/Documents/Create.cshtml
@@ -1,50 +1,34 @@
 ﻿@model TranslationReg.Models.DocumentModel
-<div class="formContainer">
 
-    @using (Html.BeginForm("Create", "Documents", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
-    {
-        @Html.AntiForgeryToken()
-        <div class="form-horizontal">
-            
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.Document.Name, "Название", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Document.Name, new { htmlAttributes = new { @class = "form-control" , required = "required "} })
-                    @Html.ValidationMessageFor(model => model.Document.Name, "", new { @class = "text-danger" })
-                </div>
-            </div>
+@using (Html.BeginForm("Create", "Documents", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    @Html.AntiForgeryToken()
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Document.ProjectId, "Проект", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownListFor(model => Model.Document.ProjectId, Model.Projects, new { @class = "form-control", requred = "required" })
-                    @Html.ValidationMessageFor(model => model.Document.ProjectId, "", new { @class = "text-danger" })
-                </div>
-            </div>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.Document.Name, "Название")
+        @Html.EditorFor(model => model.Document.Name, new { htmlAttributes = new { @class = "form-control", required = "required " } })
+        @Html.ValidationMessageFor(model => model.Document.Name, "", new { @class = "text-danger" })
+    </div>
 
-            <div class="form-group">
-                @Html.Label("Файл оригинала", new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <input type="file" name="original" required = "required" />
-                </div>
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Document.ProjectId, "Проект")
+        @Html.DropDownListFor(model => Model.Document.ProjectId, Model.Projects, new { @class = "form-control", requred = "required" })
+        @Html.ValidationMessageFor(model => model.Document.ProjectId, "", new { @class = "text-danger" })
+    </div>
 
-            <div class="form-group">
-                @Html.Label("Конечный файл (*если готов)", new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <input type="file" name="final" />
-                </div>
-            </div>
+    <div class="form-group">
+        @Html.Label("Файл оригинала")
+        <input type="file" name="original" required="required" />
+    </div>
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Сохранить" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
-    }
-</div>
+    <div class="form-group">
+        @Html.Label("Конечный файл (*если готов)")
+        <input type="file" name="final" />
+    </div>
+
+    <input type="submit" value="Сохранить" class="btn btn-default btn-form" />
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
