--- a/TranslationReg/Views/Documents/CreateProjectDoc.cshtml
+++ b/TranslationReg/Views/Documents/CreateProjectDoc.cshtml
@@ -1,41 +1,29 @@
 ﻿@model TranslationRegistryModel.Document
-<div class="formContainer">
+<div class="dynamic-block-create">
 
     @using (Html.BeginForm("Create", "Documents", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
         @Html.HiddenFor(model => model.ProjectId)
 
-        <div class="form-horizontal">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.Name, "Название", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", required = "required " } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.Label("Файл оригинала", new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <input type="file" name="original" required="required" />
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.Label("Конечный файл (*если готов)", new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <input type="file" name="final" />
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Сохранить" class="btn btn-default" />
-                </div>
-            </div>
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, "Название")
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", required = "required " } })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
         </div>
+
+        <div class="form-group">
+            @Html.Label("Файл оригинала")
+            <input type="file" name="original" required="required" />
+        </div>
+
+        <div class="form-group">
+            @Html.Label("Конечный файл (*если готов)")
+            <input type="file" name="final" />
+        </div>
+
+        <input type="submit" value="Сохранить" class="btn btn-default btn-form" />
     }
 </div>
 
