--- a/TranslationReg/Views/LanguagePairs/Create.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Create.cshtml
@@ -1,38 +1,26 @@
 ﻿@model TranslationReg.Models.LanguagePairsModel
-<div class="formContainer">
+<div class="dynamic-block-create">
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.languagePair.Name, "Наименование", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.languagePair.OriginalLanguageId, "Язык оригинала", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownListFor(model=>model.languagePair.OriginalLanguageId, Model.originalLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.languagePair.TranslationLanguageId, "Язык перевода", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.languagePair.TranslationLanguageId, Model.translationLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Сохранить" class="btn btn-default" />
-                </div>
-            </div>
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.languagePair.Name, "Наименование")
+            @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
         </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.languagePair.OriginalLanguageId, "Язык оригинала")
+            @Html.DropDownListFor(model => model.languagePair.OriginalLanguageId, Model.originalLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.languagePair.TranslationLanguageId, "Язык перевода")
+            @Html.DropDownListFor(model => model.languagePair.TranslationLanguageId, Model.translationLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
+        </div>
+
+        <input type="submit" value="Сохранить" class="btn btn-default btn-form" />
     }
 </div>
 
