--- a/TranslationReg/Views/Projects/Edit.cshtml
+++ b/TranslationReg/Views/Projects/Edit.cshtml
@@ -5,55 +5,45 @@
 
 <h2>Редактировать данные проекта</h2>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.Project.Id)
-    @Html.HiddenFor(model => model.Project.CreatorId)
-    @Html.HiddenFor(model => model.Project.Date)
+<div class="dynamic-block-create">
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Project.Creator, "Создатель", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
+
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Project.Id)
+        @Html.HiddenFor(model => model.Project.CreatorId)
+        @Html.HiddenFor(model => model.Project.Date)
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Project.Creator, "Создатель")
             @Html.EditorFor(model => model.Project.Creator.Name, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Project.Name, "Наименование", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
+        <div class="form-group">
+            @Html.LabelFor(model => model.Project.Name, "Наименование")
             @Html.EditorFor(model => model.Project.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
             @Html.ValidationMessageFor(model => model.Project.Name, "", new { @class = "text-danger" })
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Project.LanguagePairId, "Языковая пара", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
+        <div class="form-group">
+            @Html.LabelFor(model => model.Project.LanguagePairId, "Языковая пара")
             @Html.DropDownListFor(model => model.Project.LanguagePairId, Model.LanguagePairs, new { @class = "form-control", requred = "required" })
             @Html.ValidationMessageFor(model => model.Project.LanguagePairId, "", new { @class = "text-danger" })
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Project.ProjectStatuseId, "Статус", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
+        <div class="form-group">
+            @Html.LabelFor(model => model.Project.ProjectStatuseId, "Статус")
             @Html.DropDownListFor(model => model.Project.ProjectStatuseId, Model.ProjectStatus, new { @class = "form-control", requred = "required" })
             @Html.ValidationMessageFor(model => model.Project.ProjectStatuseId, "", new { @class = "text-danger" })
         </div>
-    </div>
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Сохранить" class="btn btn-default" />
-        </div>
-    </div>
+
+        <input type="submit" value="Сохранить" class="btn btn-default btn-form" />
+
+    }
 </div>
-}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
