--- a/TranslationReg/Views/User_Stage/Edit.cshtml
+++ b/TranslationReg/Views/User_Stage/Edit.cshtml
@@ -13,7 +13,7 @@
         @Html.Hidden("DocFileId", Model.work.DocFileId)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.work.UserId, "Пользователь", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.work.UserId, "Пользователь" )
             <div class="col-md-10">
                 @Html.DropDownList("UserId", Model.usersSelectList, new { htmlAttributes = new { @class = "form-control", required = "required"} })
                 @Html.ValidationMessageFor(model => model.work.UserId, "", new { @class = "text-danger" })
@@ -21,7 +21,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.work.Amount, "Количество", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.work.Amount, "Количество" )
             <div class="col-md-10">
                 <input class="form-control" type="number" required="required" min="1" max="100000" name="Amount" value="@Model.work.Amount" />
                 @Html.ValidationMessageFor(model => model.work.Amount, "", new { @class = "text-danger" })
@@ -29,7 +29,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.work.Comment, "Комментарий", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.work.Comment, "Комментарий" )
             <div class="col-md-10">
                 <input class="form-control" type="text" name="Comment" value="@Model.work.Comment"/>
                 @Html.ValidationMessageFor(model => model.work.Comment, "", new { @class = "text-danger" })
