Default icon added, menu items order changed,  small fixes, web config changed in order to use image-management plugin

--- a/TranslationReg/Views/Shared/_LoginPartial.cshtml
+++ b/TranslationReg/Views/Shared/_LoginPartial.cshtml
@@ -20,7 +20,7 @@
 
                 @if (avatarPath != null)
                 {
-                    <img src="@avatarPath" />
+                    <img src="@avatarPath" style="padding-top:2px" />
                 }
             </li>
             <li>
