optional image upload filter, deleting upload on exeption occures.

--- a/TranslationReg/Views/Account/Register.cshtml
+++ b/TranslationReg/Views/Account/Register.cshtml
@@ -35,7 +35,7 @@
 
         <div class="form-group">
             @Html.Label("Файл аватарки")
-            <input type="file" name="avatar" />
+            <input type="file" name="avatar" accept="image/*" />
         </div>
 
         <input type="submit" value="Зарегистрировать" class="btn btn-default btn-form" />
